2018-01-31 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* historygraphs/Makefile,
	  historygraphs/Makefile.coremark,
	  historygraphs/coremark-1.0.patch:
	  Infrastructure for Coremark code size and speed history graphs.
	* historygraphs/*.svg:
	  Bring graphs into svn, since they take substantial effort to recreate.

2018-01-22 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* historygraphs:
	  Infrastructure for generating SDCC code size and speed history graphs.

2014-04-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* emu/rrgb/main.c:
	  Fix error handling, bug #2261, patch by Robert Baruch.

2012-10-02 Borut Razem <borut.razem AT siol.net>

	* emu/rrz80/disasm.cc: fixed warning
	* emu/rrgb/Makefile.in: link libreries after object files

2011-06-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* emu/rrgb/debugger.c,
	* emu/rrgb/main.c,
	* emu/rrz80/disasm.cc: fixed warnings
	* Makefile.rules.in: fixed bug 3144100 parallel make

2010-04-13 Borut Razem <borut.razem AT siol.net>

	* emu/rrgb/csock.c, emu/rrgb/z80.c, emu/rrgb/debugger.c,
	  emu/rrgb/main.c, emu/rrgb/disgb.c:
	  fixed SunPro C warnings

2010-04-08 Borut Razem <borut.razem AT siol.net>

	* sdcc-extra/emu/rrz80/disasm.cc: removed comma after the last enum
	  element since SunPro C compiler comlains

2010-04-04 Borut Razem <borut.razem AT siol.net>

	* configure, Makefile.in, configure.in, emu/Makefile.in,
	  emu/rrz80/Makefile.in, emu/rrz80/cpu/Makefile.in,
	  emu/rrgb/Makefile.in, Makefile.rules.in:
	  fixed for Solaris SunPro compiler

2010-02-21 Borut Razem <borut.razem AT siol.net>

	* emu/rrgb/parse_map.c: fixed bug #2956037:
	  rrgb crashes if wrong map file format is supplied

2010-02-09 Borut Razem <borut.razem AT siol.net>
	* emu/rrgb/z80ops.c: enabled opcode 0xfb - instruction ei
	* emu/rrgb/z80.c: report the exact address and value of invalid opcode
	* emu/rrgb/debugger.c: fixed dump command - displaying ASCII values
