@@ -1,9 +1,10 @@
 # Important revisions:
 # 3.4.0: 8985 (affected by -Werror bug #2280)
 # 3.5.0: 9256
-# 3.6.0: 9618.
+# 3.6.0: 9618
+# 3.7.0: 10233
 # Broken: 8984-9000, 9104 (bug #2280), 9106-9114 (whetstone build segfaults), 9379-9402 (SDCC build fails), 9477 (SDCC build fails), 9958-9959 (whetstone build fails)
-REVISIONS = 9105 9124 9127 9138 9157 9182 9187 9193 9207 9218 9233 9256 9275 9291 9307 9319 9354 9376 9410 9418 9424 9438 9445 9452 9461 9478 9487 9492 9493 9498 9521 9540 9550 9568 9589 9596 9601 9604 9618 9624 9632 9635 9636 9637 9638 9640 9645 9646 9649 9651 9653 9662 9666 9679 9707 9730 9740 9747 9751 9761 9773 9784 9791 9793 9797 9803 9807 9808 9815 9819 9820 9830 9836 9879 9901 9905 9926 9929 9932 9939 9941 9946 9949 9953 9955 9956 9961 9962 9964 9965 9969 9976 9984 9994 9997 10000 10017 10048 10058 10069 10072 10077 10080 10108 10124 10147 10163 10165 10167 10174 10181 10182 10185 10192 10209 10211
+REVISIONS = 9105 9120 9124 9127 9138 9157 9171 9175 9182 9187 9191 9193 9207 9208 9218 9233 9256 9275 9291 9307 9311 9319 9354 9376 9410 9418 9424 9438 9442 9445 9452 9461 9478 9487 9492 9493 9498 9521 9540 9550 9568 9581 9589 9596 9601 9602 9603 9604 9618 9624 9632 9635 9636 9637 9638 9640 9645 9646 9649 9651 9653 9654 9659 9662 9664 9665 9666 9679 9707 9730 9740 9747 9751 9761 9773 9784 9790 9791 9793 9797 9803 9807 9808 9815 9818 9819 9820 9830 9832 9836 9879 9901 9904 9905 9919 9926 9928 9929 9930 9932 9934 9939 9941 9946 9949 9953 9955 9956 9961 9962 9964 9965 9969 9976 9984 9994 9997 10000 10017 10048 10058 10069 10072 10077 10080 10108 10124 10147 10163 10165 10167 10174 10181 10182 10185 10192 10209 10211 10233
        
 BENCHMARKS = whetstone dhrystone coremark
 
